# TadABench-1M

./: .gitignore  README.md  pyproject.toml
config/: NB1M_ood_MLP_ESM2-35M.py  NB1M_ood_MLP_ESMC-300M.py  NB1M_ood_MLP_NT-50M.py
scripts/: run.py
utils/: util.py
utils/backbone/: constant.py  esm2.py  esm3.py  nucleotidetransformer.py
utils/dataset/: __init__.py  regression.py
utils/model/: __init__.py  base.py  mlp.py
utils/tools/: __init__.py  evaluation.py  logging.py  loss.py  optimizer.py
