[project]
name = "tadabench-1m"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "biotite>=1.0.0",
    "datasets>=3.6.0",
    "einops>=0.8.1",
    "esm==3.2.0",
    "numpy>=2.2.5",
    "ruff>=0.11.10",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "torch>=2.7.0",
    "transformers<4.48.2",
    "wandb>=0.19.11",
]
